# flying-shooter

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  run.bat
assets/shaders/: pbr.wgsl
public/: index.html
src/: components.rs  fps_plugin.rs  game.rs  input.rs  lib.rs  main.rs  math.rs  radar.rs
