[package]
name = "extreme_bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = "0.12"
bevy_ggrs = { version = "0.14", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.8", features = ["ggrs"] }
bevy_asset_loader = "0.18"
clap = { version = "4.4", features = ["derive"] }
bevy_roll_safe = "0.1"
bevy_egui = "0.23"
bevy_prototype_lyon = "0.10.0"
virtual_joystick = { git = "https://github.com/clinuxrulz/virtual_joystick.git", branch = "wasm-touch" }
wasm-bindgen = "0.2.90"
